--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.4.2",
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "main": "./index.js",
-  "dependencies": { "redis": "*", "debug": "*" },
+  "dependencies": { "redis": "0.7.2", "debug": "0.7.0" },
   "devDependencies": { "connect": "*" },
   "engines": { "node": "*" }
 }
